--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ python-dotenv>=1.0.0
 fastmcp>=2.3.0
 pydantic>=2.0.0
 pydantic-settings>=2.0
-google-generativeai>=0.5.0
+google-genai>=1.0.0
 python-multipart
 httpx>=0.24.0
 httpx-sse>=0.3.0
